--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@okta/okta-react": "^6.7.0",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-rc.4",
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
     "next": "13.0.2",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
